added slfuj logging and rewrrriten junit testcases